--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,9 @@
 
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="op1">ADMISSION</string>
+    <string name="op2">GALLERY</string>
+    <string name="op3">EDU PLUS</string>
+    <string name="op4">ABOUT US</string>
+    <string name="op5">CONTACT US</string>
 </resources>
